<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">KProject</string>
    <string name="enter">Enter</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="exit">Exit</string>
    <string name="today">Today</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="error">Error</string>
    <string name="unfortunately_only_one_appointment_per_day_is_possible">
        Unfortunately, only one appointment per day is possible</string>
    <string name="time_has_passed">Time has passed</string>
    <string name="busy">Busy</string>
    <string name="free">Free</string>
    <string name="your_time">Your time</string>
    <string name="no">No</string>
    <string name="secret_code">Secret code</string>
    <string name="code" translatable="false">9373102060</string>
    <string name="fill_in_all_the_fields">Fill in all the fields</string>
    <string name="wrong_code_entered">Wrong code entered</string>
    <string name="massage_chair">Massage chair</string>
    <string name="your_turn_soon">Your turn soon</string>
    <string name="info">Info</string>
    <string name="cancel">Cancel</string>
    <string name="your_turn_has_been_overwritten">Your turn has been overwritten</string>
    <string name="instruction_full_text">
        1. We go into the office, take off our shoes, put on shoe covers.\n
        2. Take off outerwear / jacket, put on a disposable cape.\n
        3. Gently sit down on the massage chair.\n
        When landing, you must first sit on a chair with your booty, and only then throw your legs.\n
        4. Select the required program on the control panel\n
        5. We are waiting for 40 seconds until the chair adjusts to your size\n
        6. Enjoy the massage.\n
        7. After the massage we gently fly out of the chair. Do not step on the foot platform!\n
        8. Take off the disposable cape and shoe covers, throw them into the basket.\n
        9. Optionally you can drink water.\n
        10. Leaving the treatment room, turn on the quartz lamp.\n
    </string>
    <string name="instruction">INSTRUCTION</string>
    <string name="how_to_use_the_massage_chair">HOW TO USE THE MASSAGE CHAIR?</string>
    <string name="sorry_your_time_is_up">Sorry, your time is up</string>
    <string name="unfortunately_you_can_borrow_once_every_two_days">Unfortunately, you can borrow once every 2 days</string>
</resources>