<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment"
    android:background="@color/dark_blue3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/instruction"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/desc_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_the_massage_chair"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_full_text"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/desc_text_view"
            android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>